# RTDA-SemanticSegmentation

./: .gitignore  README.md  config.py  data_loader.py  main.py  main_adversarial.py  model_loader.py  notebook.ipynb  pyproject.toml  train.py  train_lovasz.py  utils.py  validation.py
datasets/: __init__.py  cityscapes.py  gta5.py  label_definitions.py  preprocess_gta5_labels.py
losses/: lovasz_loss.py
models/bisenet/: build_bisenet_multilevel.py
models/discriminator/: discriminator.py
scripts/: debug_cityscapes.py  debug_gta.py
